<resources>
    <string name="app_name">QinZiTravel</string>
    <string name="navigationSight">Sight</string>
    <string name="navigationTravel">Travel</string>
    <string name="navigationRepast">Repast</string>
    <string name="navigationHotel">Hotel</string>
    <string name="navigationUser">User</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This is less than 11 digital or not a email address</string>
    <string name="error_incorrect_email">This phone or email is not exist</string>
    <string name="error_invalid_password">This password is too short or not contain letters and numbers</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_email_required">This email is required</string>
    <string name="error_password_required">This password is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_out">Login out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_info">User Info</string>
    <string name="user_order">Order</string>
    <string name="user_setting">Setting</string>
    <string name="user_exit">Exit</string>

    <!-- Strings related to register -->
    <string name="action_sign_up">Sign up</string>
    <string name="register_username">Username</string>
    <string name="register_phone">Phone</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_address">Address</string>
    <string name="register_type">User Type</string>
    <string name="error_address_required">address is required</string>
    <string name="error_phone_required">phone is required</string>
    <string name="error_invalid_phone">phone number less that 11</string>
    <string name="error_username_required">username is required</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Collapsing_Sight_Activity -->
    <string name="sight_info_1">
    乐园精选国内外深受欢迎的游乐项目，将游乐设备与当地文化、山水元素完美结合，设置2大特色主题游乐区：欢庆小寨、青秀山水、缔造16项娱乐设施，涵盖四个“全国首创型项目”：邕江险度、凤鸟历险、百鸟剧场和绣球飞舞，实现全天候、全室内、全龄段、全家庭的欢乐世界。</string>
    <string name="sight_price_1">价格： ￥ 111</string>
    <string name="sight_address_1">地址：</string>

    <string name="sight_info_2">乐园将新颖的娱乐项目与国内先进的VR、AR等高科技技术相结合，引入热门的互联网文化内容，为游客打造新奇的互动式体验。
    \n园区分为人鱼王国、太阳部落、卡乐小镇、卡西诺大街、云部落五大主题区域，包括全球首创的影视跳楼机，幻影剧场等15个室内高科技项目和19个室外游乐项目。</string>
    <string name="sight_price_2">价格： ￥ 222</string>
    <string name="sight_address_2">地址：</string>

    <string name="sight_info_3">欢乐城堡儿童主题乐园</string>
    <string name="sight_price_3">价格 ￥ 333</string>
    <string name="sight_address_3">地址：</string>

    <string name="sight_info_4">马尔代夫水上乐园</string>
    <string name="sight_price_4">价格： ￥ 444</string>
    <string name="sight_address_4">地址：</string>

    <string name="sight_info_5">积木城创意乐园</string>
    <string name="sight_price_5">价格： ￥ 555</string>
    <string name="sight_address_5">地址：</string>

    <!-- Collapsing_Hotel_Activity -->
    <string name="hotel_info_1">
        温馨公寓 可住4人 性价比完美
        \n▹24小时热水 极速wifi
        \n▹沐浴露 洗发水 吹风 浴巾 拖鞋都有哦
        \n▹步行地铁3分钟 楼下就是公交
        \n▹步行春熙路商圈5分钟
        \n▹下楼就是大型超市
        \n▹提供全城美食攻略
        \n▹楼下门禁
        \n▹保安24小时值班
        \n▹步行市二医院地铁口3分钟
        \n▹步行春熙路商圈5分钟
        \n▹楼下就是18路，3路公交
        \n▹离宽窄巷子2个地铁站
        \n▹挨着太古里 ifs
        \n这间屋子从装修到布置都由房东小姐姐一个人完成 这间温馨的小屋象征了我对生活的热爱 对生活每一天都充满了新的期待 希望把这份热爱一起分享给大家
        \n无论是旅行还是下班回到出租屋 家里都应该温暖而暖心 每一处都应该有自己的喜欢的味道
    </string>
    <string name="hotel_price_1">价格：￥ 121</string>
    <string name="hotel_address_1">地址：</string>

    <string name="hotel_info_2">
        房子是由百年老宅改造而成,木制结构为主,中式风格。周边有桂林最著名的国宾洞“芦笛岩”景区及特色鲁家村,而我所在的位置更是没被开发的桃花江边,桂林市区中的百亩稻田保护区,四季景色怡人,有如世外桃源,人文朴实。这里有最美的日落日出。
    </string>
    <string name="hotel_price_2">价格：￥ 122</string>
    <string name="hotel_address_2">地址：</string>

    <string name="hotel_info_3">
        桂林芦庐精品别墅位于风景秀丽的桂林秀峰区庙门前村，秀峰区打造的旅游生态绿色通道绕村而过，距离国家4A级景区芦笛岩仅1000米，芦庐别墅依山傍水，桃花湾的芳莲池碧波荡漾，青山绿树，倒映其中，竹排轻划，风景独好。距离桂林市中心5.7公里，桂林火车站6.2公里，桂林北站8.1公里，20分钟即可到达.当洗净旅途的尘土，感受山水间的诗情画意，你是否能感受到灵魂的静谧，一切寂静无声。芦庐别墅便隐在这船歌岸柳的景致中，踏入大堂，正中央一幅桂林山水画直入眼帘，别墅拥有7间风格迥异的客房，分别以叠彩和风、阳江秋月、訾洲烟雨、尧山冬雪、西峰夕照、独秀奇峰、栖霞真境桂林八景命名
        \n舒适睡床，高清电视，无线WiFi上网，养生茶壶，客人可按喜好自行泡制各类健康养生茶。
观景房推开窗口就可触及到山水，还可以享受户外SPA，躺在天体浴缸里面，沐浴着温暖的阳光，耳边伴随着远处传来慵懒的轻音乐旋律；“星星房”让您有种手可摘星辰的欲望；“亲子房”使您充分和四周山水浑然为一体，带着孩子一起嬉戏，领略山水美景的同时也能好好放松一下身心，与孩子一起享受成长的喜悦。
    </string>
    <string name="hotel_price_3">价格：￥ 123</string>
    <string name="hotel_address_3">地址：</string>

    <string name="hotel_info_4">
        奇幻空间酒店式公寓（桂林北站）恒大广场店位于桂林市叠彩区桂林北站正对面，恒大广场一期25栋，酒店下楼即到车站广场和恒大购物中心，恒大影院，出门就有大型公交车站和汽车客运站，周边有人人乐及沃尔玛商场，交通便利，环境优美，集娱乐、旅游、商业中心于一体的商务服务式公寓。多种房型供您选择，温馨舒适、高贵典雅、分外怡人。高起点建设，个性化管理，酒店式的服务，公寓式的管理，有传统酒店的硬件配置，同时提供家庭式的居室布局，居室内配有全套品牌家具、家电，将酒店的高标准服务融于日常生活之中，既有家的私密性和生活气氛，又有高档酒店的良好环境和专业服务，让您出门在外既享受星级酒店的服务也能找到家的温馨。
    </string>
    <string name="hotel_price_4">价格：￥ 124</string>
    <string name="hotel_address_4">地址：</string>

    <string name="hotel_info_5">
        \n童话般的“独岛之墅”相信会因您选择了她而无悔。
        \n1.翡翠岛位于城市中央，“独岛之墅”在翡翠岛顶端，直达湖的中心。.住在此处，犹如佳人睡在湖的中央。
        \n2.别墅配有私家游览艇“独岛之墅号”，可随时在别墅登船，省去了购票、排队、侯船的麻烦
        \n3.别墅配有"艾力绅"7座商户车，可到萧山机场接机、到汽车站接车。
        \n4.所有卧室全是一线湖景房，物超所值。
        \n5.二个超大客厅、一个开放式厨房、一个露台和若干个阳台。
        \n6.所有房间设独立干湿分离卫生间、智能马桶、1.7米超大浴缸、TOTO卫浴
        \n7.私家电梯、私家游步道直达千岛湖水面，随时和水来一次肌肤之亲
        \n8.别墅下面设有若干个钓位，可以体念垂钓的乐趣
        \n9.wifa联网的智能机器人，可以对话、跳舞，为你播放音乐和投影电影，为你解答所有问题
        \n10.卧室使用55寸超大智能4K电视机，可以无线推送手机上的照片、视频和电影
        \n11.300平米私家花园，德国进口燃气烧烤炉，整洁卫生
        \n12.120平米的水榭平台可以同学聚会、朋友轰趴、生日part、婚纱拍摄、令你终身难忘
        \n13.独岛之墅是政府认可的城市民宿，可开具增票和普票。
        \n14.房源紧张，请提着早预约。
    </string>
    <string name="hotel_price_5">价格：￥ 125</string>
    <string name="hotel_address_5">地址：</string>

    <!-- UserInfoActivity -->
    <string name="user_info_name">user name:</string>
    <string name="user_info_phone">user phone:</string>
    <string name="user_info_email">user email:</string>
    <string name="user_info_address">user address:</string>
</resources>
